@@ -300,9 +300,9 @@ module ElasticAPM
         expect(subject.options).not_to be(original_options)
       end
 
-      it 'updates the log level on the existing logger' do
+      it 'does not update the log level on the existing logger' do
         subject.replace_options(log_level: Logger::DEBUG)
-        expect(subject.logger.level).to eq(Logger::DEBUG)
+        expect(subject.logger.level).to eq(Logger::INFO)
       end
     end
   end
